--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='ru'>
     <head>
         <title>index</title>
         <link rel="stylesheet" href="css/style.css">
@@ -10,8 +10,8 @@
             <img src="img/37387.png" alt="logo">
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="">HTTP</a></li>
+                    <li><a href="">HTTPs</a></li>
                     <li><a href="">Дополнительные источники</a></li>
                     <li><a href="">Подписка</a></li>
                 </ul>
